[package]
name = "GitHubPushNotificationLineBotRust"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
chrono = "0.4.40"
chrono-tz = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.line-bot-sdk-rust]
git = "https://github.com/Kayxue/line-bot-sdk-rust.git"
branch = "KayBranch"
features = ["actix_support"]
