[package]
name = "GitHubPushNotificationLineBotRust"
version = "0.1.0"
edition = "2021"

[dependencies]
xitca-web = { version = "*", features = ["logger", "json", "codegen"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.40"
chrono-tz = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.bot_sdk_line]
git = "https://github.com/Kayxue/LineBotSdkRust.git"
branch = "master"
